# metaflow-ga-testing

./: .gitignore  README.md  conftest.py  merge_results.py  pyproject.toml  tox.ini
.github/workflows/: test-local.yml  test-report.yml  test_kubernetes.yml
docs/: extension-testing-framework.md  marker-taxonomy.md
scripts/: merge_results.py
src/metaflow_qa_tests/argo_workflows/: conftest.py  test_argo_basic.py  test_simple_trigger.py
src/metaflow_qa_tests/argo_workflows/conditional_tests/: conditionalFlow.py  conditionalSkipFlow3.py  conditionalSkipFlow4.py  conditionalSkipFlow5.py  nestedConditional3.py  nestedConditional6.py  nestedRecursiveConditional1.py  nestedRecursiveConditional2.py  recursiveConditional1.py  recursiveConditional2.py  test_conditionals.py
src/metaflow_qa_tests/argo_workflows/deploy_time_triggers/: simple_trigger_flow.py  test_deploy_time_triggers.py  test_simple_trigger.py
src/metaflow_qa_tests/argo_workflows/parameter_tests/: eventflow.py  test_parameters.py
src/metaflow_qa_tests/basic/: conftest.py  test_basic.py
src/metaflow_qa_tests/flows/: condatest.py  helloflow.py  mixed_condatest.py  mixed_pypitest.py  pypitest.py  trigger_flow.py
src/metaflow_qa_tests/kubernetes/: conftest.py  test_kubernetes.py
tests/extensions/sample_extension/: setup.py
tests/extensions/sample_extension/metaflow_extensions/sample/: mfextinit_sample.py
tests/extensions/sample_extension/metaflow_extensions/sample/tests/: test_sample_extension.py
