[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-qa-tests"
version = "0.1.0"
description = "QA test suite for metaflow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "metaflow",
    "pytest",
    "pytest-xdist"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    # Backend markers (where the test runs)
    "local: runs against local backend via Runner API",
    "kubernetes: runs steps as Kubernetes pods via Runner API",
    "argo_workflows: deploys and triggers flows via Deployer API on Argo",

    # Feature markers (what the test exercises)
    "conda: requires conda or micromamba to be installed",
    "pypi: requires pypi environment support",
    "triggers: tests deploy-time trigger and event functionality",
    "conditionals: tests conditional branching flows",
    "parameters: tests parameter passing and trigger-on-finish",
    "cron: tests cron-based scheduling",
    "notifications: tests Argo workflow notification config",
]